--- a/contactenos.html
+++ b/contactenos.html
@@ -3,6 +3,15 @@
         <title>esta es mi primera pagina</title>
     </head>
     <body>
-        <p> look that</p>
+        <p> my fist formulary</p>
+        <form action="http://35.193.82.16/submit.php" method="post">
+            <label for="nombre">Nombre:</label>
+            <input type="email" id="nombre" name="nombre"><br>
+            <br><br>
+            <label for="clave">clave:</label>
+            <input type="password" id="clave" name="clave"><br>
+            <input type="submit" value="enviar">
+
+        </form>
     </body>
 </html>
