--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html>
     <head>
         <title>
+            <link rel="stylesheet" href="css/css/estilos.css" 
             hoja de vida
         </title>
+        <link rel="stylesheet" href="css/css/estilos.css" hreflang="css/cs/estilos.css"
+        
     </head>
     <body>
         <h1>hoja de vida <h1/>
         <center><h2>Maria Camila Acosta</h2></center>
         <h3>Maria Camila Acosta</h3>
-        <p>estudio en talento tech xD</p>
+        <p>estudio en talento tech xD</p> 
         <h2> competencias lol bilingueeee</h2>
         <a href="https://www.bing.com/images/search?view=detailV2&ccid=jz%2fQRfxP&id=11E539BA06DB1F70804B5C53F21D4FE20044AB0D&thid=OIP.jz_QRfxPBvO8_TfM9V3jywHaHa&mediaurl=https%3a%2f%2fs-media-cache-ak0.pinimg.com%2foriginals%2ffb%2f6d%2f16%2ffb6d16c4321ab45dad1c6290f2740f7a.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.8f3fd045fc4f06f3bcfd37ccf55de3cb%3frik%3dDatEAOJPHfJTXA%26pid%3dImgRaw%26r%3d0&exph=1440&expw=1440&q=perritos&simid=608047613415991878&FORM=IRPRST&ck=5C819FF4EBA116235494FD4644B48E17&selectedIndex=13&itb=0&ajaxhist=0&ajaxserp=0" target="_blank">buscame 3114619563></a>
         
